Fixing example, OVERHAULING the entire process to make things MUUUUUUUUUUCH faster (using the topological sort on the DAG and creating paths that way is so much faster). There's a slight issues with the width's I'll need to revisit due to some subtlety in weird/sparse cases where there is actually extra space to expand the appointments widths. Will need to update the readme at some point going forward to reflect these changes.

--- a/example/example.css
+++ b/example/example.css
@@ -104,4 +104,5 @@ div::-webkit-scrollbar {
     border-top: 1px solid #000000;
     height: 50px;
     background-color: #ffffff;
+    margin-top: -3px;
 }
